# MSAlign

./: .gitignore  1_prepare.py  1_prepare_many_splits.py  2_encode.py  3_train.py  LICENSE  README.md  dev.py  main.py  ot_shift.py  ot_shift_rebutal.py  prepare.py  pyproject.toml  requirements.txt
FullMSAlign/: README.md
MSAlign/: alignment_layers.py  datamodule.py  model.py  utils.py
OLD/: 1_train.py  2_finetune.py
OLD/FLARE/: __init__.py  datamodule.py  model.py  mol_encoder.py  ms_encoder.py  params.py  transforms.py
OLD/JESTR/: __init__.py  datamodule.py  model.py  mol_encoder.py  ms_encoder.py  params.py  transforms.py
OLD/utils/: msclip_utils.py
datasets/: datasets.py  molecules_transforms.py  spectra_transforms.py
models/: __init__.py
models/EmbCos/: __init__.py  datamodule.py  main.py  model.py
models/FLARE/: __init__.py  datamodule.py  main.py  model.py  utils.py
models/JESTER/: __init__.py  main.py  model.py  utils.py
models/JESTR/: datamodule.py  main.py  model.py
models/MSAlign/: __init__.py  datamodule.py  main.py  model.py  utils.py
old/: datasets.py
preprocessing/: README.md  __init__.py  annotate_peaks.py  definitions.py  download.py  encode_mol.py  encode_spectra.py  encoder_mol.py  prepare_candidates.py  process_smiles.py  split.py
preprocessing/subformula_annotation/: chem_utils.py  subformula_assign.py  wrapper.py
preprocessing/utils/: murcko.py  rdkit_mp.py
scripts/: encode.sh  prepare.sh  prepare_many_splits.sh  train.sh  train2.sh
scripts/std/: JESTR.sh  (+7 more)
transforms/: molecules_transforms.py  spectra_transforms.py
(+46 files in other folders)
