[project]
name = "msalign"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "dreams @ git+https://github.com/pluskal-lab/DreaMS.git",
    "transformers>=4.40.0,<5.0.0",
    "tokenizers>=0.19.0",
    "accelerate>=0.29.0",
    "safetensors>=0.4.3",
    "lightning>=2.6.1",
    "tqdm",
    "wandb",
    "numpy<2.0",
    "pandas",
    "pot",
    "h5py",
    "matplotlib",
    "pyteomics>=4.7.5",
    "rdkit>=2023",
    "torch==2.2.1",
    "torchdata==0.7.1",
    "dgl==2.1.0",
    "dgllife>=0.3.2",
    "pydantic>=2.0",
]
